fix(MoveDescription) corrigindo quebras de linhas e scrollbar na caixa de texto

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -29,6 +29,7 @@
 }
 
 .panel {
+  max-height: 150px;
   justify-content: space-between;
   display: flex;
   flex-direction: row;
