--- a/src/MoveDescription/MoveDescription.module.css
+++ b/src/MoveDescription/MoveDescription.module.css
@@ -19,9 +19,15 @@
 }
 
 .textContainer {
+    overflow-y: auto;
+    max-width: 500px;
     padding: 5px 5px;
     width: 100%;
     height: 80%;
     background-color: white;
     border-radius: 12px;
+}
+
+.textContainer pre {
+    white-space: pre-wrap;
 }
